# myFTS

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: index.cpp  search.cpp
src/app/jniapp/: JniSearch.cpp  JniSearch.java  main.java
src/ftslib/: CMakeLists.txt
src/ftslib/ftslib/: CMakeLists.txt
src/ftslib/ftslib/ftslib/: indexer.cpp  indexer.hpp  parser.cpp  parser.hpp  searcher.cpp  searcher.hpp
src/ftslib/tests/: CMakeLists.txt  test_indexer.cpp  test_parser.cpp
